src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  . ::-webkit-scrollbar {
    display: none;
  }

  /* For IE, Edge and Firefox */
  .scrollbar-hide {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }
}

@layer base {
  html {
    -webkit-tap-highlight-color: transparent;
    @apply scroll-smooth;
  }

  body {
    @apply text-black bg-white dark:bg-black  dark:text-gray-200 dark:[color-scheme:dark] transition-colors duration-200 ease-in-out;
  }

  :focus-visible {
    @apply relative outline-none ring-blue-500 rounded-xl ring-2;
  }

  ::selection {
    @apply text-gray-900 bg-blue-200/60 dark:bg-purple-500 dark:text-gray-100;
  }
}

@layer components {
  figure.figure {
    @apply relative flex flex-col items-center justify-center overflow-hidden;
  }

  figure.figure figcaption {
    @apply text-gray-800 dark:text-gray-500 text-[0.8em];
  }

  .img-blur {
    border: 1px solid black;
    filter: blur(15px);
    overflow: hidden;
  }

  .unblur {
    animation: unblur 300ms linear;
  }

  @keyframes unblur {
    from {
      filter: blur(15px);
    }
    to {
      filter: blur(0);
    }
  }
}

